--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,12 +1,14 @@
 server:
-  port: 8080
+  port: 8083
 
 spring:
+  application:
+    name: user-service
   datasource:
-    url: "jdbc:mysql://localhost:3306/identity_service"
+    url: "jdbc:mysql://localhost:3307/user?createDatabaseIfNotExist=true"
     driverClassName: "com.mysql.cj.jdbc.Driver"
-    username: root
-    password: khanhtrinh2401
+    username: user
+    password: 123456
   jpa:
     hibernate:
       ddl-auto: update
